fixed alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -936,6 +936,10 @@
 		color: rgba(255, 255, 255, 0.5) !important;
 		opacity: 1.0;
 	}
+	
+	#mc_embed_signup .indicates-required {
+		text-align:left;
+	}
 
 /* Button */
 
